Composer: Correct composer package name.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Jamespot S3 Get",
+    "name": "jamespot/s3_get",
     "description": "Jamespot PHP Script to get files from S3 backup",
     "require": {
         "php-opencloud/openstack": "^3.2"
